bug fix: infinite overflow y

--- a/style.css
+++ b/style.css
@@ -59,6 +59,7 @@ header {
     left: 0;
     width: 100%;
     pointer-events: none;
+    overflow: hidden;
 }
 
 #text {
